methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:2: error: not found: type int
def move(nbPas: int,versLAvant: Boolean) {
                ^MethodsArgs:3: error: Boolean does not take parameters
  if (versLAvant()) {
                ^