methods.args.MethodsArgs.scala.code
def move(nbPas: int,versLAvant: Boolean) {
  if (versLAvant()) {
    avance(nbPas)
  } else {
    recule()
  }
}